--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ yarn-error.log
 /.vscode
 .idea/workspace.xml
 .idea/workspace.xml
+public/vid/Asad Umar.mp4
+public/vid/garddea Farooqi.mp4
+public/vid/hareem farooq.mp4
+public/vid/jamal shah.mp4
+public/vid/SAPMMessage.mp4
+public/vid/Secretary Message.mp4
+public/vid/ulma message.mp4
