--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ public/vid/jamal shah.mp4
 public/vid/SAPMMessage.mp4
 public/vid/Secretary Message.mp4
 public/vid/ulma message.mp4
+My Docs/ppwnapgov_website.sql
+My Docs/site.zip
